--- a/BB-SPI0-01.dts
+++ b/BB-SPI0-01.dts
@@ -32,11 +32,11 @@
              pinctrl-names = "default";
              pinctrl-0 = <&spi0_pins_s0>;
 
-             spidev@0 {
+//             spidev@0 {
                  spi-max-frequency = <24000000>;
                  reg = <0>;
                  compatible = "linux,spidev";
-            };
+//            };
         };
     };
 };
